--- a/css/main.css
+++ b/css/main.css
@@ -88,7 +88,7 @@ section{
 	content: '';
 	position: absolute;
 	z-index: 0;
-	background-image: url('/images/union-bg.svg');
+	background-image: url('../images/union-bg.svg');
 	background-position: bottom left;
 	background-repeat: no-repeat;
 	width: 100%;
@@ -101,7 +101,7 @@ section{
 	content: '';
 	position: absolute;
 	z-index: 0;
-	background-image: url('/images/union-after.svg');
+	background-image: url('../images/union-after.svg');
 	background-position: top right;
 	background-repeat: no-repeat;
 	width: 100%;
@@ -212,7 +212,7 @@ section{
 	background: #fff;
 	border: 1px solid rgba(29, 29, 27, 0.16);
 	padding-left: 42px;
-	background: url('/images/location-current.svg') no-repeat left center;
+	background: url('../images/location-current.svg') no-repeat left center;
 	background-position-x: 6%;
 	background-size: 20px;
 }
@@ -224,7 +224,7 @@ section{
 	line-height: 18px;
 	display: inline-block;
 	padding: 7px 12px 7px 36px;
-	background-image: url('/images/3d.svg');
+	background-image: url('../images/3d.svg');
 	background-repeat: no-repeat;
 	background-position: center left;
 	background-position-x: 10px;
@@ -237,7 +237,7 @@ section{
 .show-more{
 	padding-left: 42px;
 	position: relative;
-	background: url('/images/restart.svg') no-repeat left center;
+	background: url('../images/restart.svg') no-repeat left center;
 	background-position-x: 10px;
 	background-size: 20px;
 }
@@ -295,7 +295,7 @@ header nav ul li.menu-item-has-children > a{
 }
 header nav ul li.menu-item-has-children > a::after {
 	content: '';
-	background: url('/images/chevron-down.svg') no-repeat;
+	background: url('../images/chevron-down.svg') no-repeat;
 	background-position: center center;
 	background-size: contain;
 	position: absolute;
@@ -533,7 +533,7 @@ aside .hero_mnu_item  div{
 	justify-content: center;
 	flex-flow: column;
 	padding: 32px;
-	background-image: url('/images/bg.svg');
+	background-image: url('../images/bg.svg');
 	background-repeat: no-repeat;
 	background-position: top left;
 	opacity: 0;
@@ -564,7 +564,7 @@ aside .hero_mnu_item  div{
 	height: 56px;
 	background: #fff;
 	border-radius: 50%;
-	background-image: url('/images/link-arrow.svg');
+	background-image: url('../images/link-arrow.svg');
 	background-repeat: no-repeat;
 	background-position: center center;
 }
@@ -719,7 +719,7 @@ aside .hero_mnu_item  div{
 	opacity: 0;
 	visibility: hidden;
 	border-radius: 50%;
-	background-image: url('/images/maximize.svg');
+	background-image: url('../images/maximize.svg');
 	background-repeat: no-repeat;
 	background-position: center center;
 }
@@ -768,11 +768,11 @@ aside .hero_mnu_item  div{
 	z-index: -1;
 }
 .alt-before::before{
-	background: url('/images/union-alt-before.svg') no-repeat top left;
+	background: url('../images/union-alt-before.svg') no-repeat top left;
 
 }
 .alt-before::after{
-	background: url('/images/union-alt-after.svg') no-repeat bottom right;
+	background: url('../images/union-alt-after.svg') no-repeat bottom right;
 }
 .alt-form .section-title{
 	margin-bottom: 32px;
@@ -790,7 +790,7 @@ aside .hero_mnu_item  div{
 }
 .line-columns::after{
 	content: '';
-	background: url('/images/line-large.svg') no-repeat;
+	background: url('../images/line-large.svg') no-repeat;
 	width: 100%;
 	height: 100%;
 	position: absolute;
@@ -872,7 +872,7 @@ aside .hero_mnu_item  div{
 .eternal_reviews_item .review_meta .review_meta_rate div{
 	width: 24px;
 	height: 24px;
-	background: url('/images/star.svg') no-repeat center center;
+	background: url('../images/star.svg') no-repeat center center;
 }
 .eternal_reviews_item .review_meta .review_meta_rate div + *{
 	margin-left: 8px;
@@ -1032,7 +1032,7 @@ footer{
 	position: absolute;
 	z-index: 0;
 	height: 100%;
-	background: url('/images/union-large.svg') no-repeat top left;
+	background: url('../images/union-large.svg') no-repeat top left;
 	top: 0;
 	left: 0;
 	background-position-y: -10%;
@@ -1133,7 +1133,7 @@ div.work_card a{
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background: url('/images/union-block.svg') no-repeat left top;
+	background: url('../images/union-block.svg') no-repeat left top;
 	z-index: -1;
 }
 /*end services block*/
@@ -1219,7 +1219,7 @@ div.work_card a{
 }
 .page_filters_dropdown .select2-container--default .select2-selection--single .select2-selection__arrow b{
 	border: none;
-	background: url('/images/chevron-down.svg') no-repeat center right;
+	background: url('../images/chevron-down.svg') no-repeat center right;
 	width: 18px;
     height: 18px;
     background-size: cover;
