--- a/css/media.css
+++ b/css/media.css
@@ -184,8 +184,13 @@
 	header{
 		position: fixed;
 		width: 100%;
-		padding: 8px 0;
+		padding: 0;
 		z-index: 99;
+	}
+	.header-inner{
+		background: var(--dark);
+		padding-top: 8px;
+		padding-bottom: 8px;
 	}
 	header .h_widgets .logo::before{
 		content: none;
@@ -441,6 +446,7 @@
 	}
 	.f_widget .btn{
 		font-size: 12px;
+		padding: 10px;
 	}
 }
 
